# idf-python-wheels

./: .gitignore  .pre-commit-config.yaml  Build-Wheels.ps1  Pipfile  README.md  Test-Wheels.ps1  Upload-Wheels.sh  _helper_functions.py  build_requirements.txt  build_wheels.py  build_wheels_from_file.py  check_wheel_collisions.py  create_index_pages.py  exclude_list.yaml  extract_exclude_packages.py  force_no_binary_linux.txt  include_list.yaml  pyproject.toml  repair_wheels.py  supported_versions.py  test_build_wheels.py  test_check_wheel_collisions.py  test_wheels_install.py  update_python_versions.py  upload_wheels.py  verify_s3_wheels.py  yaml_list_adapter.py
.github/workflows/: build-bluez.yml  build-cmake-linux-armv7.yml  build-tree-sitter-c-armv7.yml  build-wheels-ad-hoc.yml  build-wheels-defined.yml  build-wheels-linux-arm64-self-hosted.yml  build-wheels-linux-armv7-self-hosted.yml  build-wheels-macos-M1-self-hosted.yml  build-wheels-macos-dispatch.yml  build-wheels-platforms.yml  build-wheels-python-dependent.yml  build-wheels-ubuntu-dispatch.yml  build-wheels-windows-dispatch.yml  build-wheels-windows.yml  build-wheels.yml  create-release.yml  danger.yml  get-supported-versions.yml  issue_comment.yml  manylinux-repair.yml  new_issues.yml  new_prs.yml  only-create-and-upload-index.yml  pre-commit-check.yml  test-wheels-install.yml  unit-tests.yml  update-python-versions.yml  upload-python-wheels.yml  wheels-repair.yml
docker/: Dockerfile.manylinux_armv7l  Dockerfile.manylinux_armv7l_legacy
os_dependencies/: linux_arm.sh  linux_armv7_docker_prepare.sh  macos.sh  manylinux.sh  ubuntu.sh  windows.ps1
resources/: idf-python-wheels-diagram-source.txt
resources/html/: header.html  pretty_header.html
test/: test_build_wheels.py  test_list.yaml  test_wheels_install.py
tools/kconfig_new/esp-windows-curses/: setup.py
upload-wheels/: Cargo.toml
upload-wheels/src/: main.rs
