[package]
name = "upload-wheels"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
#aws-config = "0.0.23-alpha"
#openssl-sys = "0.9"
#openssl = { version = "0.10", features = ["vendored"] }
#aws-sdk-rust = "0.1.40"
#rust-s3 = {version =  "0.27", git = "https://github.com/JurajSadel/rust-s3.git", branch = "add_ap-east-1_region" }
rust-s3 = { path = "C:/Users/JurajSadel/rust-s3/s3" }
#rust-s3 = "0.27"
structopt = { version = "0.3", default-features = false }
regex = "1"
multimap = "0.8.3"
indicatif = "0.16.2"